Remove scrollbar + fix font sizing

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,6 +4,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
+  font-size: 1.3rem;
 }
 
 .header {
@@ -21,7 +22,7 @@
 .textarea {
   position: relative;
   resize: none;
-  font-size: 1.1rem;
+  font-size: 1.3rem;
   padding: 1rem 2rem 1rem 2rem;
   width: 75vw;
   border-radius: 0.5rem;
